# django-ts

./: .gitignore  LICENSE  README.md  pyproject.toml  synctypes.py
.github/workflows/: ci.yml
django_ts_constants/: apps.py
django_ts_constants/management/commands/: synctypes.py
tests/: conftest.py  settings.py  test_synctypes.py
