[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-ts"
version = "0.1.1"
description = "Generate TypeScript constants and enums from Django model"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Regis Camimura", email = "regiscamimura@gmail.com" }
]
keywords = ["django", "typescript", "codegen", "constants", "enums"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "django>=4.0",
]

[project.urls]
Homepage = "https://github.com/regiscamimura/django-ts-constants"
Documentation = "https://github.com/regiscamimura/django-ts-constants#readme"
Repository = "https://github.com/regiscamimura/django-ts-constants"
Issues = "https://github.com/regiscamimura/django-ts-constants/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "django-stubs>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/django_ts_constants"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "src"]
